[gd_scene load_steps=10 format=2]

[ext_resource path="res://dynamic_objects/scripts/CraftingGrid.gd" type="Script" id=1]
[ext_resource path="res://dynamic_objects/Animated_Fire.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/sfx/fire_large.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.02, 0.02, 0.02 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.521569, 0, 1, 0.392157 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.9, 1, 0.95 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0, 0.521569, 0, 0.392157 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.9, 1, 0.95 )

[node name="CraftingGrid" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="GridNodes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )

[node name="GridPoint" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="CraftIndicator" type="Spatial" parent="."]
visible = false

[node name="CraftIndicatorInvalid" type="MeshInstance" parent="CraftIndicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="CraftIndicatorValid" type="MeshInstance" parent="CraftIndicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="Animated_Fire" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Fire_Sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )
stream = ExtResource( 3 )
